Bugfix: buttons out of view on large screens

--- a/resources/assets/stylus/components/Teaser-sunprotection.styl
+++ b/resources/assets/stylus/components/Teaser-sunprotection.styl
@@ -34,13 +34,13 @@ teaser-sunprotection_height = rhythm(50)
 .Teaser-sunprotection__splitter > a .Button
     // structure
     display     : none
-    absolute    : top 50% left 50%
+    absolute    : top rhythm(25) left 50%
     width       : rhythm(40)
     margin-left : (@width / 2 * (-1))
-    margin-top  : rhythm(10)
+    margin-top  : rhythm(20)
     text-align  : center
     // theme-style
-    box-shadow  : 0 0 5px rgba(color.shadow, 0.75)
+    box-shadow  : 0 0 5px color.shadow
 
 .Teaser-sunprotection__splitter > a:hover .Button
     display : block
